Added update role endpoint
